[package]
name = "latex_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "latexc"
path = "src/main.rs"

[dependencies]
logos = "0.12"      # lexer
nom = "7"           # parser combinators
printpdf = "0.3"    # PDF generation
ttf-parser = "0.16" # font metrics
# clap = "4"          # CLI args
clap = { version = "4.0", features = ["derive"] }
